WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265860
[GStreamer][WebRTC] Missing support for parameter-less setLocalDescription()
https://bugs.webkit.org/show_bug.cgi?id=265860
Summary
[GStreamer][WebRTC] Missing support for parameter-less setLocalDescription()
Philippe Normand
Reported
2023-12-05 04:44:47 PST
imported/w3c/web-platform-tests/webrtc-stats/supported-stats.https.html times out because of that.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-01-11 06:54:02 PST
The test times out actually because we don't support setLocalDescription() calls without argument. Re-titling accordingly. The test will fail afterwards, because webrtcbin is not spec-compliant, see
https://gitlab.freedesktop.org/gstreamer/gstreamer/-/issues/3218
Philippe Normand
Comment 2
2024-01-11 06:54:51 PST
We can work-around this in WebKit until spec compliance issues are fixed.
Philippe Normand
Comment 3
2024-01-11 07:25:44 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22659
EWS
Comment 4
2024-01-12 04:50:20 PST
Committed
272968@main
(274953f826fd): <
https://commits.webkit.org/272968@main
> Reviewed commits have been landed. Closing PR #22659 and removing active labels.
Radar WebKit Bug Importer
Comment 5
2024-01-12 04:51:17 PST
<
rdar://problem/120899746
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug